welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: ';' expected but 'true' found.
  if (n<3) {reutrn true}
                   ^